# dantzig-wolfe-python

./: .gitignore  ANALYSIS.md  CHANGELOG.md  README.md  bdd-badge.json  data.json  pyproject.toml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
benchmarks/: __main__.py  generator.py  models.py  runner.py  table.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_92adadb378b81fb7___init___py.html  z_92adadb378b81fb7_cli_py.html  z_92adadb378b81fb7_lp_parser_py.html  z_92adadb378b81fb7_models_py.html  z_92adadb378b81fb7_solver_py.html  z_92adadb378b81fb7_subproblem_py.html
scripts/: bdd_report.py  install-hooks.sh  pre-push
specs/001-gherkin-bdd-specs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gherkin-bdd-specs/checklists/: requirements.md
specs/001-gherkin-bdd-specs/contracts/: cli_api.md  json_schema.md  library_api.md
specs/001-gherkin-bdd-specs/features/: cli_usage.feature  cplex_lp_usage.feature  library_usage.feature
specs/002-fix-four-sea-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-four-sea-tests/tools/: cplex_to_json.py
specs/003-generate-synthetic-block/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-perf-benchmark/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-perf-benchmark/checklists/: requirements.md
specs/004-perf-benchmark/contracts/: cli_invocation.md
specs/005-cplex-lp-input/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-cplex-lp-input/checklists/: requirements.md
specs/005-cplex-lp-input/contracts/: cli_api.md  lp_parser_api.md
specs/006-analysis-findings/: plan.md  tasks.md
specs/007-coverage-badge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-coverage-badge/checklists/: requirements.md
specs/007-coverage-badge/contracts/: badges.md
src/dwsolver/: __init__.py  cli.py  lp_parser.py  models.py  solver.py  subproblem.py
tests/: __init__.py  synthetic.py
tests/bdd/: conftest.py
tests/bdd/steps/: test_cli_usage.py  test_cplex_lp_usage.py  test_library_usage.py
tests/benchmarks/: test_four_sea_workers.py
tests/fixtures/: infeasible_problem.json  ref_book_bertsimas.expected.json  ref_book_bertsimas.json  ref_book_bertsimas_double.expected.json  ref_book_bertsimas_double.json  ref_book_bertsimas_triple.expected.json  ref_book_bertsimas_triple.json  ref_book_dantzig.expected.json  ref_book_dantzig.json  ref_book_lasdon.expected.json  ref_book_lasdon.json  ref_four_sea.expected.json  ref_four_sea.json  ref_web_mitchell.expected.json  ref_web_mitchell.json  ref_web_trick.expected.json  ref_web_trick.json  simple_two_block.json  unbounded_problem.json
tests/fixtures/bertsimas_lp/: master.lp  subprob_0.lp
tests/fixtures/bertsimas_lp_double/: master.lp  subprob_0.lp  subprob_1.lp
tests/fixtures/bertsimas_lp_triple/: master.lp  subprob_0.lp  subprob_1.lp  subprob_2.lp
tests/fixtures/eight_sea/: subprob_1.cplex  subprob_2.cplex  subprob_3.cplex  subprob_4.cplex  subprob_5.cplex  subprob_6.cplex  subprob_7.cplex  subprob_8.cplex
tests/fixtures/lasdon_lp/: master.lp  subprob_0.lp  subprob_1.lp
tests/fixtures/trick_lp/: master.lp  subprob_0.lp  subprob_1.lp
tests/unit/: test_bdd_report.py  test_bench_generator.py  test_bench_table.py  test_lp_parser.py  test_models.py  test_solver.py  test_subproblem.py  test_synthetic.py
